# fastnetmon

./: .clang-format  .gitignore  .gitmodules  .travis.yml  BUILDING_FREEBSD_KERNEL_FOR_NETMAP.md  CMakeLists.txt  Changes  DATA_STRUCTURES.md  FINE_TUNING.md  FreeBSD_INSTALL.md  HAPPY_CUSTOMERS.md  INSTALL  INSTALL.md  LICENSE  MAC_OS_INSTALL.md  MANUAL_INSTALL.md  Makefile  Makefile_deprecated  README.md  README_ZC.md  SECURITY.md  SLACKWARE_INSTALL.md  THANKS.md  TODO  Test  auto_installer.sh  build.sh  build_netmap.bash  build_plugin_tester.sh  build_syn_umbrella.sh  build_test.bash  decode_tcp_flags.c  fast_library.cpp  fast_library.h  fast_priority_queue.cpp  fast_priority_queue.h  fastnetmon  fastnetmon.conf  fastnetmon.cpp  fastnetmon_client.cpp  (+22 more)
src/: .clang-format  .clang_formatter_excludes  CMakeLists.txt  Dockerfile  abstract_subnet_counters.hpp  all_logcpp_libraries.h  all_logcpp_libraries.hpp  api.cpp  api.hpp  api_client.cpp  api_server.cpp  attack_details.hpp  ban_list.hpp  bgp_flow_spec.cpp  bgp_flow_spec.h  bgp_protocol.cpp  bgp_protocol.hpp  bgp_protocol_flow_spec.cpp  bgp_protocol_flow_spec.hpp  build_binary_version_with_openvz.bash  build_plugin_tester.sh  build_rpm.sh  conanfile.txt  dynamic_binary_buffer.hpp  exabgp_queue_writer.py  fast_dpi.cpp  fast_dpi.h  fast_endianless.hpp  fast_library.cpp  fast_library.h  fast_library.hpp  fast_platform.h  fast_platform.h.template  fast_platform.hpp  fast_priority_queue.cpp  fast_priority_queue.h  fast_priority_queue.hpp  fastnetmon.conf  fastnetmon.cpp  fastnetmon.proto  (+82 more)
src/FreeBSD_port/: Makefile  pkg-descr  pkg-plist
src/FreeBSD_port/files/: patch-src_CMakeLists.txt
src/a10_plugin/: .gitignore  README.md  a10.py  change_log.txt  fastnetmon_a10_v0.2.py  fastnetmon_a10_v0.3.py
src/a10_plugin/configs/: README.md  dns_test_server.txt  tps_base_config_v1.txt  tps_zone_config_v1.txt
src/a10_plugin/json_config/: bgp.py  logoff.py  tps_base_config_json_v1.txt  tps_zone_config_json_v1.txt  write_memory.py
src/a10_plugin/json_configs/: ddos_dst_zone.py  ddos_dst_zone_backup.py  tps_base_config_json_v1.txt  tps_zone_config_json_v1.txt
src/a10_plugin/tests/: README.md  helperTests.py
src/actions/: exabgp_action.cpp  exabgp_action.hpp  gobgp_action.cpp  gobgp_action.h  gobgp_action.hpp  gobgp_api_client.proto  pfring_hardware_filter_action.cpp  pfring_hardware_filter_action.h
src/afpacket_plugin/: afpacket_collector.cpp  afpacket_collector.h  afpacket_collector.hpp
src/ci/: parallel_builder.go
src/cmake/: FindHiredis.cmake
src/example_plugin/: example_collector.cpp  example_collector.h  example_collector.hpp
src/gobgp_client/: gobgp_client.cpp  gobgp_client.hpp
src/iana/: iana_ethertypes.hpp  iana_ip_protocols.hpp
src/ipfix_fields/: ipfix_fields.csv  ipfix_rfc.cpp  ipfix_rfc.hpp
src/juniper_plugin/: README.md  fastnetmon_juniper.php  notify_about_attack.sh
src/libpatricia/: patricia.c  patricia.cpp  patricia.h  patricia.hpp
src/libsflow/: libsflow.cpp  libsflow.h  libsflow.hpp
src/man/: fastnetmon  fastnetmon.1  fastnetmon.8  fastnetmon_client  fastnetmon_client.1
src/metrics/: clickhouse.cpp  clickhouse.hpp  graphite.cpp  graphite.hpp  influxdb.cpp  influxdb.hpp
src/mikrotik_plugin/: README.md  fastnetmon_mikrotik.php  notify_about_attack.sh  readme.txt  routeros_api.php
src/netflow_plugin/: ipfix.hpp  ipfix_collector.cpp  ipfix_collector.hpp  ipfix_metrics.hpp  netflow.cpp  netflow.h  netflow.hpp  netflow_collector.cpp  netflow_collector.h  netflow_collector.hpp  netflow_meta_info.hpp  netflow_template.cpp  netflow_template.hpp  netflow_template_storage.cpp  netflow_template_storage.hpp  netflow_v5.hpp  netflow_v5_collector.cpp  netflow_v5_collector.hpp  netflow_v5_metrics.hpp  netflow_v9.hpp  netflow_v9_collector.cpp  netflow_v9_collector.hpp  netflow_v9_metrics.hpp
src/netmap_plugin/: netmap_collector.cpp  netmap_collector.hpp
src/packaging/FreeBSD/: Makefile  distinfo  pkg-descr  (+1 more)
src/patches/: 0001-Fix-netmap-code-for-compatibility-with-C-boost.patch
src/pcap_plugin/: pcap_collector.cpp  pcap_collector.h  pcap_collector.hpp
src/pfring_plugin/: pfring_collector.cpp  pfring_collector.h
src/plugins/: pcap_reader.cpp  plugin_runner.cpp
src/scripts/: README.md  bgp_network_collector.py  bgp_network_retriever.py  build_all_fastnetmon_dependencies.pl  build_any_package.pl  build_deb_package.pl  build_libary_bundle.pl  build_library_bundle.pl  enable_passthrough_for_pcie_nic_to_kvm_vm.pl  exabgp_firewall.conf  exabgp_monitor.conf  exabgp_network_collector.conf  exabgp_queue_writer.py  fastnetmon_build.pl  fastnetmon_notify.py  firewall_queue.py  firewall_tests.py  install_fastnetmon_dependencies.pl  ipfix_csv_processor.pl  ipfw_stats.pl  notify_with_discord.sh  notify_with_slack.sh  package_installer.pl  reformat_code_with_clang_format.sh  reset_redis_stats
src/sflow_plugin/: sflow.h  sflow_collector.cpp  sflow_collector.h  sflow_collector.hpp  sflow_data.h
src/simple_packet_capnp/: simple_packet.capnp  simple_packet.capnp.c++  simple_packet.capnp.h
src/snabbswitch_plugin/: snabbswitch_collector.cpp  snabbswitch_collector.h
src/tests/: af_packet.cpp  af_packet_ring.cpp  build_netmap.bash  build_pcap_reader.sh  build_pcap_reader_memory.sh  conntrack_prototype.cpp  exabgp_pipe.c  ip_lookup.cpp  json_parser.lua  jsonc.cpp  long_prefix_match_unused_code.cpp  lpm_performance_tests.cpp  lua_integration.cpp  mongodb_client.cpp  netflow_exclude.json  netmap.cpp  parser_performance_tests.cpp  patch_for_custom_libc.patch  patch_for_libcuckoo_as_flow_tracking_structure.patch  patricia_performance_tests.c  patricia_performance_tests.cpp  pcap_reader.cpp  pcap_reader_memory.cpp  pcap_writer.cpp  pfring_parser_zc_issue.c  promisc.cpp  py_counters_performance_test.py  sort_struct.cpp  speed_counters_performance_test.cpp  spsc_prototype.cpp  store_data_to_graphite.cpp  test_cidr.cpp  tins_parser.cpp  traffic_structures_performance_tests.cpp  traffic_structures_performance_tests_real_traffic.cpp  tsc_timers.cpp
src/xdp_plugin/: xdp_collector.cpp  xdp_collector.hpp  xdp_kernel.c
(+207 files in other folders)
